--- a/css/estilos.css
+++ b/css/estilos.css
@@ -33,7 +33,7 @@ header{
     align-items: center;
     justify-content: space-between;
     z-index: 1000;
-    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 1);
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
 }
 
 header .logo{
@@ -76,7 +76,7 @@ header .fa-bars{
     border-radius: .5rem;
     padding: 5rem 1.5rem;
     cursor: pointer;
-    border: .1rem solid rgba(0, 0, 0, .3);
+    border: .1rem solid rgba(0,0,0,.3);
     display: none;
 }
 
@@ -106,3 +106,38 @@ header .fa-bars{
    }
     
 }
+
+@media (max-width:768px){
+    header .fa-bars{
+       display: block; 
+    }
+    header .navbar{
+        position: absolute;
+        top: 100%; left: 0; right: 0;
+        background: #eee;
+        border-top: .1rem solid rgba(0,0,0,.1);
+        clip-path:polygon(0 0, 100% 0, 100% 0, 0 0);
+    }
+
+    header #toggler:checked ~ .navbar{
+        clip-path:polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    }
+
+    header .navbar a{
+        margin: 1.5rem;
+        padding: 1.5rem;
+        background: #fff;
+        border: .1rem solid rgba(0,0,0,.1);
+        display: block;
+    }
+}
+
+@media (max-width:450px){
+    html{
+     font-size: 50%;
+    }
+    /* header{
+     padding: 2rem;
+    } */
+     
+ }
