--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,4 @@
+/* Declaración de variables (colores) */
 :root{
     --celeste: #36cecc
 }
@@ -20,10 +21,40 @@
 
 html{
     font-size: 62.5%;
-    scroll-behavior: smooth;
-    scroll-padding-top: 6rem;
     overflow-x: hidden;
 }
+
+section{
+   padding:2rem 9%; 
+}
+
+.subtitulo{
+    text-align: center;
+    font-size: 3rem;
+    color: #333;
+    padding: 1rem;
+    margin: 2rem 0;
+    background: rgba(62, 205, 249, 0.69);
+}
+
+/* Declaración de los botones */
+
+.btn{
+    display: inline-block;
+    margin-top: 1rem;
+    border-radius: 5rem;
+    background: #333;
+    color: #fff;
+    padding: .9rem 3.5rem;
+    cursor: pointer;
+    font-size: 1.7rem;
+}
+
+.btn:hover{
+    background: var(--celeste);
+}
+
+/* Inicio del Header */
 header{
     position: fixed;
     top: 0; left: 0; right: 0;
@@ -46,13 +77,13 @@ header .logo span{
     color: var(--celeste);
 }
 
-header .navbar a{
+header .nav a{
     font-size: 2rem;
     padding: 0 1.5rem;
     color: #666;
 }
 
-header .navbar a:hover{
+header .nav a:hover{
     color: var(--celeste);
 }
 
@@ -80,6 +111,98 @@ header .fa-bars{
     display: none;
 }
 
+/* Fin del header */
+
+
+/* Comienzo del Main */ 
+/*Section1 x2 */
+.home{
+    display: flex;
+    align-items: center;
+    min-height: 100vh;
+    background: url(/img/BanderaArgentina.jpg.png) no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.home .contenido{
+    max-width: 50rem;
+}
+
+.home .contenido h3{
+    font-size: 6rem;
+    color: #333;
+}
+
+.home .contenido span{
+    font-size: 3.5rem;
+    color:rgba(0,0,0,.8);
+    padding: 1rem 0;
+    line-height: 1.5;
+}
+
+.home .contenido p{
+    font-size: 1.5rem;
+    color:#383636;
+    padding: 1rem 0;
+    line-height: 1.5;
+}
+
+
+.introd .dulceOsalado{
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    flex-wrap: wrap;
+    padding: 2rem 0;
+    padding-bottom: 3rem;
+}
+
+.introd .dulceOsalado .img-container{
+    flex: 1 1 40rem;
+    position: relative;
+}
+
+.introd .dulceOsalado .img-container img{
+    width: 100%;
+    border: 1.5rem solid #fff;
+    border-radius: .5rem;
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
+    height: 100%;
+    object-fit: cover;
+}
+
+.introd .dulceOsalado .img-container h3{
+    position: absolute;
+    top: 50%; transform: translateY(-50%);
+    font-size: 3rem;
+    background: #fff;
+    width: 100%;
+    padding: 1rem 2rem;
+    text-align: center;
+    mix-blend-mode: screen;
+}
+
+.introd .dulceOsalado .contenido{
+    flex: 1 1 40rem;
+}
+
+.introd .dulceOsalado .contenido h3{
+    font-size: 3rem;
+    color: #333;
+}
+
+.introd .dulceOsalado .contenido p{
+    font-size: 1.5rem;
+    color: #999;
+    padding: .5rem 0;
+    padding-top: 1rem;
+    line-height: 1.5;
+}
+
+/* FIN de la seccion1 x2 */
+
+/* Comienzo de la seccion2 */
 
 
 
@@ -96,6 +219,11 @@ header .fa-bars{
 
 
 
+
+
+
+
+/* Inicio 3 Responsive */
 
 @media (max-width:991px){
    html{
@@ -104,6 +232,14 @@ header .fa-bars{
    header{
     padding: 2rem;
    }
+
+   section{
+    padding: 2rem;
+   }
+   
+   .home{
+    background-position: left;
+   }
     
 }
 
@@ -111,24 +247,32 @@ header .fa-bars{
     header .fa-bars{
        display: block; 
     }
-    header .navbar{
+    header .nav{
         position: absolute;
         top: 100%; left: 0; right: 0;
         background: #eee;
         border-top: .1rem solid rgba(0,0,0,.1);
-        clip-path:polygon(0 0, 100% 0, 100% 0, 0 0);
+        clip-path:polygon(0 0, 100% 0, 100% 0, 0 0); /* Recorta al elemento en función de una forma geométrica y oculta lo que quede por fuera */
     }
 
-    header #toggler:checked ~ .navbar{
-        clip-path:polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    header #toggler:checked ~ .nav{ /* Checked indica que el elemento está seleccionado */
+        clip-path:polygon(0 0, 100% 0, 100% 100%, 0 100%); /* Cambia el recorte */
     }
 
-    header .navbar a{
+    header .nav a{
         margin: 1.5rem;
         padding: 1.5rem;
         background: #fff;
         border: .1rem solid rgba(0,0,0,.1);
         display: block;
+    }
+
+    .home .contenido h3{
+        font-size: 5rem;
+    }
+
+    .home .contenido span{
+        font-size: 2.5rem;
     }
 }
 
@@ -136,8 +280,11 @@ header .fa-bars{
     html{
      font-size: 50%;
     }
-    /* header{
-     padding: 2rem;
-    } */
+
+    .subtitulo{
+        font-size: 3rem;
+    }
      
  }
+
+ /* FIN Responsive */
