--- a/css/estilos.css
+++ b/css/estilos.css
@@ -148,6 +148,17 @@ header .fa-bars{
     line-height: 1.5;
 }
 
+.container{
+    width: 100%;
+    font-size: 2.2rem;
+    text-align: center;
+    color: #fff;
+    padding: 10px 10px;
+    border-radius: 16px;
+    background-color: #333333ea;
+    border: 2px solid rgba(255, 255, 255, 0.552);
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.5);
+}
 
 .introd .dulceOsalado{
     display: flex;
