--- a/css/estilos.css
+++ b/css/estilos.css
@@ -312,88 +312,80 @@ footer{
  /* FIN Responsive */
 
  /* clases para las recetas dulces*/
-
- .dulces1 {
-    grid-area: miArea;
-    background-color: aquamarine !important;
-    
-}
-.dulces2 {
-    grid-area: miArea2;
-    background-color: aquamarine !important;
-}
-.dulces3 {
-    grid-area: miArea3;
-    background-color: aquamarine !important;
-
-}
-
-.dulces4{
-    grid-area: miArea4;
-    background-color: aquamarine !important;
-}
-.dulces5{
-    grid-area: miArea5;
-    background-color: aquamarine !important;
-}
-
-.dulces6{
-    grid-area: miArea6;
-    background-color: aquamarine !important;
-}
-
-.dulces7{
-    grid-area: miArea7;
-    background-color: aquamarine !important;
-}
-
-.dulces8{
-    grid-area: miArea8;
-    background-color: aquamarine !important;
-}
-.contenedor-dulces {
-    display: grid;
-    grid-template-areas: '. .'
-                         'miArea miArea'                     
-                         '. .'
-                         'miArea2 miArea2'
-                         '. .'                     
-                         'miArea3 miArea3'
-                         '. .'
-                         'miArea4 miArea4'                     
-                         '. .'
-                         'miArea5 miArea5'
-                         '. .'                     
-                         'miArea6 miArea6'
-                         '. .'
-                         'miArea7 miArea7'                     
-                         '. .'
-                         'miArea8 miArea8'
-                         ;
-    grid-gap: 30px;
-    background-color: #c3fbff;
-    padding: 100px;
-    margin: 50px;
-    border-radius: 55px;
-    margin-left: 150px;
-    margin-right: 150px;
-}
-
-.contenedor-dulces > div {
-    background-color: azure;
-    text-align: left;
-    padding: 50px ;
-    font-size: 20px;
-    border-radius: 55px;
-}
-h1{
-    font-family: sans-serif;
-    font-size: 3rem;
-    font-style: oblique;
+ .dulces{
+    margin-top: 100px;
     text-align: center;
-    padding: 30px;
-    margin: 80px;
+    font-family:  sans-serif;
+    font-style: italic;
+    color: white ;
+    background-color: skyblue;
+    font-size: x-large;
+    font-weight: bold;
     }
+ .contenedor_destacado{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(270px,1fr));
+    gap: 1rem;
+    padding: 0.1rem;
+    justify-content: center;
+    margin: 20px;
+    background-color: aliceblue;
+   }
+
+    .contenedor-recetas {
+        width: 100%;
+        display: flex;
+       }
+        .card {
+            width: 100%;
+            margin: 50px;
+            border-radius: 20px;
+            overflow: hidden;
+            background: white;
+            box-shadow: 0px 1px 10px rgb(0, 0, 0, 0.2);
+            cursor: default;
+            transition: all 400ms ease;
+            border: deepskyblue solid;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            line-height: 1.5;
+            font-size: small;
+        }
+        .card:hover{
+            box-shadow: 5px 5px 20px rgb(0, 0, 0, 0.4);
+            transform: translateY(-3%);
+            }
+        .card img {
+            width: 100%;
+            height: 250px;
+            }
+            .card .contenido-dulce {
+                padding: 10px;
+                text-align: center;
+           }
+            
+       
+       .card .contenido-dulce h2 {
+        color: cornflowerblue;
+        margin-bottom: 15px;
+        font-size: 2rem;
+       }
+        .card .contenido-dulce a{
+            text-decoration: none;
+            padding: 10px;
+            display: inline-block;
+            margin-top: 10px;
+            color: #2fb4cc;
+            border: 1px solid #2fb4cc;
+            border-radius: 4px;
+            transition: all 400ms ease;
+        }
+        .card .contenido-dulce a:hover{
+            background: #2fb4cc;
+            color: #fff;
+        }
+/*fin clases recetas dulces*/
+
+    /*comienzo animacion en pagina de Datos curiosos*/
 .barra3{
     width: 500px;
     height: 100px;
@@ -403,9 +395,13 @@ h1{
     animation-timing-function: ease;
     animation-iteration-count: infinite;
     text-align: center;
-    margin: 25px;
-    
-}
+    margin-top: 75px;
+    padding: 30px;
+    }
+.barra3 h1{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: xx-large;
+    }
 
 @keyframes cambiarColor3 {
     0% {background: antiquewhite; width: 500px;}         /* Primer fotograma */
@@ -427,4 +423,4 @@ h1{
     width: 120px;
     height: 100px;
 }
-/*fin clases recetas dulces*/
+/*fin animación*/
