--- a/css/estilos.css
+++ b/css/estilos.css
@@ -557,10 +557,11 @@ footer{
     text-align: center;
     font-family:  sans-serif;
     font-style: italic;
-    color: white ;
-    background-color: skyblue;
+    color: black ;
+    background-color: rgba(62, 205, 249, 0.69);
     font-size: x-large;
     font-weight: bold;
+    padding: 10px;
     }
  .contenedor_destacado{
     display: grid;
@@ -570,6 +571,8 @@ footer{
     justify-content: center;
     margin: 20px;
     background-color: aliceblue;
+    border: 2px solid rgba(0, 0, 0, 0.552);
+    border-radius: 16px; 
    }
 
     .contenedor-recetas {
@@ -637,7 +640,7 @@ footer{
     justify-content: revert-layer;
     margin: 20px;
     background-color: aliceblue;
-    background-color: #CCD1D1; /* Color Oscuro */
+  
     border-radius: 16px; /* curvatura */
     padding: 10px 10px;
     box-shadow: 0 .5rem 1rem rgba(0,0,0,.5);
@@ -666,6 +669,7 @@ footer{
         background-color: #F2F3F4; /*caja interior*/
         font-size: large;
         font-weight: bold;
+
         
         border: 3px solid #138D75;
         border-radius: 16px;
@@ -686,6 +690,7 @@ footer{
         font-weight: bold;
         border: 3px solid #138D75;
         border-radius: 16px;
+        padding: 40px;
         
     }
 
@@ -701,7 +706,7 @@ footer{
         font-weight: bold;
         border: 3px solid #138D75;
         border-radius: 16px;
-
+        padding: 40px;
     }
 
     .salada_04{    /* MATAMBRE ARROLLADO */
@@ -732,6 +737,7 @@ footer{
         font-weight: bold;
         border: 3px solid #138D75;
         border-radius: 16px;
+        padding: 40px;
     }
 
     .salada_06{
@@ -746,7 +752,7 @@ footer{
         font-weight: bold;
         border: 3px solid #138D75;
         border-radius: 16px;
-
+        padding: 40px;
     }
 
     .salada_07{     /* PROVOLETA */
@@ -777,7 +783,7 @@ footer{
         font-weight: bold;
         border: 3px solid #138D75;
         border-radius: 16px;
-        
+        padding: 40px;
     }
 
     .salada_09{     
@@ -792,7 +798,7 @@ footer{
         font-weight: bold;
         border: 3px solid #138D75;
         border-radius: 16px;
-
+        padding: 40px;
     }
 
     .salada_10{     /* LOCRO */
@@ -822,6 +828,7 @@ footer{
         font-weight: bold;
         border: 3px solid #138D75;
         border-radius: 16px;
+        padding: 40px;
     }
 
     .salada_12{
@@ -835,6 +842,7 @@ footer{
         font-weight: bold;
         border: 3px solid #138D75;
         border-radius: 16px;
+        padding: 40px;
 
     }
 
@@ -849,6 +857,7 @@ footer{
         font-weight: bold;
         border: 3px solid #138D75;
         border-radius: 16px;
+        padding: 40px;
     }
 
     .salada_14{     /*CHIPA GUAZÚ*/
@@ -878,6 +887,7 @@ footer{
         font-weight: bold;
         border: 3px solid #138D75;
         border-radius: 16px;
+        padding: 40px;
 
     }
 
@@ -893,7 +903,7 @@ footer{
         font-weight: bold;
         border: 3px solid #138D75;
         border-radius: 16px;
-
+        padding: 40px;
     }
 
     .salada_17{     /*ASADO A LA PARRILLA*/
@@ -923,7 +933,7 @@ footer{
         font-weight: bold;
         border: 3px solid #138D75;
         border-radius: 16px;
-
+        padding: 40px;
     }
 
     .salada_19{
@@ -938,7 +948,7 @@ footer{
         font-weight: bold;
         border: 3px solid #138D75;
         border-radius: 16px;
-
+        padding: 40px;
     }
 /* Fin de recetas saladas */
 
