--- a/css/estilos.css
+++ b/css/estilos.css
@@ -120,7 +120,7 @@ header .fa-bars{
     display: flex;
     align-items: center;
     min-height: 100vh;
-    background: url(/img/BanderaArgentina.jpg.png) no-repeat;
+    background: url(/img/BanderaArgentina.png) no-repeat;
     background-size: cover;
     background-position: center;
 }
